--- a/css/style.css
+++ b/css/style.css
@@ -46,16 +46,15 @@ a {
     font-weight: bold;
 }
 
-.contact button {
-    background-color: #262626;
+.contact a {
     color: white;
     border: 2px solid white;
     border-radius: 3px;
-    padding: 1.5em 3em;
+    padding: 1em 1.5em;
     font-weight: bold;
 }
 
-@media screen and (max-width: 810px) {
+@media screen and (max-width: 900px) {
     .header {
         flex-direction: column;
         padding: 30px;
@@ -67,7 +66,6 @@ a {
     }
 
     .navigation {
-        width: 100%;
         justify-content: space-between;
         font-size: 1em;
     }
@@ -75,10 +73,10 @@ a {
     .navigation a {
         flex-flow: column wrap;
         padding-right: 10px;
+        padding-bottom: 10px;
     }
 
     .contact {
         justify-content: flex-start;
-        padding-top: 10px;
     }
 }
