--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     background-color: #262626;
     color: white;
     display: flex;
-    flex-direction: row;
+    /*flex-direction: row;*/
     justify-content: space-between;
 }
 
