--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,12 @@ a {
         justify-content: flex-start;
     }
 }
+
+.contactFormBackground {
+    width: 100%;
+    height: 700px;
+    background-image: url("/images/contactFromBackground.jpg");
+    /*background: url("https://res.cloudinary.com/rebelwalls/image/upload/b_black,c_fit,f_auto,fl_progressive,q_auto,w_1333/v1561471597/article/R16731_image1");*/
+    background-repeat: no-repeat;
+    background-size: cover;
+}
