--- a/css/style.css
+++ b/css/style.css
@@ -81,11 +81,63 @@ a {
     }
 }
 
-.contactFormBackground {
+.contactFormContainer {
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bgImage {
+    position: absolute;
     width: 100%;
-    height: 700px;
-    background-image: url("/images/contactFromBackground.jpg");
-    /*background: url("https://res.cloudinary.com/rebelwalls/image/upload/b_black,c_fit,f_auto,fl_progressive,q_auto,w_1333/v1561471597/article/R16731_image1");*/
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: -1;
+}
+
+.contactForm {
+    width: 1000px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    box-shadow: 0px 0px 19px 7px rgba(0, 0, 0, 0.76);
+}
+
+.contactForm h1 {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.contactForm p {
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.personalInfo {
+    display: flex;
+    flex-direction: column;
+}
+
+.label input[type="text"], input[type="email"], textarea, select {
+    padding: 8px;
+    margin-bottom: 8px;
+}
+
+.line
+{
+    height: 10px;
+    border-bottom: 1px solid white;
+}
+
+.personalInfo a {
+    font-weight: bold;
+    border: 1px solid white;
+    border-top: 2px solid white;
+    padding: 10px;
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
 }
