--- a/css/form_style.css
+++ b/css/form_style.css
@@ -18,15 +18,7 @@ a {
     align-items: center;
 }
 
-/*.bgImage {*/
-/*    position: absolute;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    z-index: -1;*/
-/*}*/
-
 .contactForm {
-    width: 800px;
     color: white;
     display: flex;
     flex-direction: column;
@@ -49,10 +41,8 @@ a {
     flex-direction: column;
 }
 
-.fieldLabel
-{
-    width: 200px;
-    /*background-color: rebeccapurple;*/
+.fieldLabel {
+    min-width: 200px;
 }
 
 .label {
@@ -60,52 +50,71 @@ a {
     align-items: center;
 }
 
-.label input[type="text"], input[type="tel"] input[type="email"], textarea, select {
-
-}
-
-.label input
-{
+.label .field, textarea, select {
     margin-bottom: 8px;
     padding: 8px;
     flex-grow: 1;
 }
 
-.label input + input
-{
+.label .field + .field{
     margin-left: 20px;
 }
 
+.telephoneInput {
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
+.fieldTel {
+    flex-shrink: 1;
+    flex-grow: 1;
+    margin-bottom: 8px;
+    padding: 8px;
+}
 
 .line {
     height: 10px;
     border-bottom: 1px solid white;
 }
 
-.personalInfo a {
+.personalInfo .submitBtn {
     font-weight: bold;
     border: 1px solid white;
     border-top: 2px solid white;
+    background-color: transparent;
+    color: white;
     padding: 10px;
     margin-top: 20px;
     margin-left: auto;
-    justify-content: center;
     width: 80%;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 768px) {
+    .contactForm {
+        padding: 20px;
+    }
+
+    .personalInfo {
+        text-align: center;
+    }
+
     .label {
-        display: block;
-        width: 200px;
+        flex-direction: column;
     }
 
-    .line {
-        width: 200px;
+    .label .field, textarea, select {
+        width: 100%;
+        box-sizing: border-box;
     }
 
-    .personalInfo a {
-        margin: 39px;
-        width: 100px;
+    .personalInfo .submitBtn {
+        margin-right: auto;
+    }
+
+    .label .field + .field{
+        margin-left: 0;
     }
 }
