--- a/css/nav_style.css
+++ b/css/nav_style.css
@@ -1,9 +1,15 @@
+html {
+    font-size: 16px;
+}
+
+
 .header {
-    width: 100%;
-    height: 150px;
     background-color: #262626;
     color: white;
     display: flex;
+    align-items: center;
+    padding: 50px;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -16,29 +22,24 @@ a {
 }
 
 .logo {
-    width: 15%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2em;
+    font-size: 2rem;
     font-family: 'Dancing Script', cursive;
 }
 
 .navigation {
-    width: 50%;
-    height: 100%;
     display: flex;
+    flex-grow: 1;
     justify-content: space-around;
     align-items: center;
-    font-size: 1.5em;
+    font-size: 1.25rem;
     font-weight: bold;
     font-family: 'Rowdies', cursive;
 }
 
 .contact {
-    width: 15%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,33 +50,30 @@ a {
     color: white;
     border: 2px solid white;
     border-radius: 3px;
-    padding: 1em 1.5em;
+    padding: 1rem 1.5rem;
     font-weight: bold;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 768px) {
     .header {
-        flex-direction: column;
         padding: 30px;
-    }
-
-    .logo {
-        width: 100%;
-        justify-content: flex-start;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     .navigation {
+        margin: 10px 0;
+        width: 100%;
         justify-content: space-between;
-        font-size: 1em;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    html {
+        font-size: 14px;
     }
 
-    .navigation a {
-        flex-flow: column wrap;
-        padding-right: 10px;
-        padding-bottom: 10px;
-    }
-
-    .contact {
-        justify-content: flex-start;
+    .header {
+        padding: 18px;
     }
 }
